<?xml version="1.0" encoding="UTF-8"?>
<project>
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.eclipse.ajdt</groupId>
	<artifactId>parent</artifactId>
	<version>2.2.4-SNAPSHOT</version>
	<packaging>pom</packaging>

	<modules>
		<!-- AJDE -->
		<module>org.aspectj.runtime</module>
		<module>org.aspectj.weaver</module>
		<module>org.aspectj.ajde</module>
		<module>org.aspectj-feature</module>

		<!-- AJDT -->
		<module>org.eclipse.ajdt.core</module>
		<module>org.eclipse.ajdt.doc.user</module>
		<module>org.eclipse.ajdt.examples</module>
		<module>org.eclipse.ajdt.ui</module>
		<module>org.eclipse.aspectj</module>
		<module>org.eclipse.contribution.weaving.jdt</module>
		<module>org.eclipse.contribution.visualiser</module>
		<module>org.eclipse.contribution.xref.core</module>
		<module>org.eclipse.contribution.xref.ui</module>

		<module>org.eclipse.ajdt-feature</module>
		<module>org.eclipse.ajdt.sdk-feature</module>
		<module>org.eclipse.contribution.weaving-feature</module>
		<module>org.eclipse.contribution.xref-feature</module>

		<module>org.eclipse.equinox.weaving.aspectj</module>
		<module>org.eclipse.equinox.weaving.sdk</module>

		<!-- Tests -->
		<module>org.eclipse.ajdt.core.tests</module>
		<module>org.eclipse.ajdt.ui.tests</module>

		<module>org.eclipse.contribution.weaving.jdt.tests</module>
		<module>org.eclipse.contribution.visualiser.tests</module>
		<module>org.eclipse.contribution.xref.core.tests</module>
		<module>org.eclipse.contribution.xref.ui.tests</module>

		<module>org.eclipse.aspectj.feature_tests</module>

		<!-- p2 repo -->
		<module>org.eclipse.ajdt.releng</module>

	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<tycho-version>2.5.0</tycho-version>
		<tycho-extras-version>2.3.0</tycho-extras-version>
		<tycho.surefire.extra.vmargs></tycho.surefire.extra.vmargs>
		<aspectj-maven-compiler-version>1.13.1</aspectj-maven-compiler-version>
	</properties>

	<profiles>
		<profile>
			<id>e45</id>
			<properties>
				<platform.version>e45</platform.version>
				<weaving.hook.version>1.1.100.v20140821-1915</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>mars</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/mars/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e46</id>
			<properties>
				<platform.version>e46</platform.version>
				<weaving.hook.version>1.1.200.v20150730-1648</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>neon</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/neon/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e47</id>
			<properties>
				<platform.version>e47</platform.version>
				<weaving.hook.version>1.2.0.v20160929-1449</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>oxygen-releases</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/oxygen/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e48</id>
			<properties>
				<platform.version>e48</platform.version>
				<weaving.hook.version>1.2.0.v20160929-1449</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>photon-releases</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/photon/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e410</id>
			<properties>
				<platform.version>e410</platform.version>
				<weaving.hook.version>1.2.200.v20180827-1235</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>2018-12-releases</id>
					<layout>p2</layout>
					<url>http://download.eclipse.org/releases/2018-12/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e419</id>
			<properties>
				<platform.version>e419</platform.version>
				<!--
				Go here - download 4.X look at version of weaving hook!
				https://download.eclipse.org/equinox/
				<weaving.hook.version>1.3.0.v20210202-1256</weaving.hook.version>
				-->
				<weaving.hook.version>1.3.0.v20210202-1256</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>2021-03-releases</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/releases/2021-03/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>e421</id>
			<properties>
				<platform.version>e421</platform.version>
				<!--
				Go here - download 4.X look at version of weaving hook!
				https://download.eclipse.org/equinox/
				-->
				<weaving.hook.version>1.3.0.v20210202-1256</weaving.hook.version>
			</properties>
			<repositories>
				<repository>
					<id>2021-09-releases</id>
					<layout>p2</layout>
					<url>https://download.eclipse.org/releases/2021-09/</url>
				</repository>
			</repositories>
		</profile>

		<profile>
			<id>os-macosx</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<tycho.surefire.extra.vmargs>-XstartOnFirstThread</tycho.surefire.extra.vmargs>
			</properties>
		</profile>

		<profile>
			<id>eclipse-sign</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<configuration>
							<includePackedArtifacts>true</includePackedArtifacts>
							<executionEnvironment>JavaSE-11</executionEnvironment>
						</configuration>
					</plugin>
<!--					<plugin>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-pack200a-plugin</artifactId>
						<executions>
							<execution>
								<id>pack200-normalize</id>
								<goals>
									<goal>normalize</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
					</plugin> -->
					<plugin>
						<groupId>org.eclipse.cbi.maven.plugins</groupId>
						<artifactId>eclipse-jarsigner-plugin</artifactId>
						<executions>
							<execution>
								<id>sign</id>
								<goals>
									<goal>sign</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
					</plugin>
<!--					<plugin>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-pack200b-plugin</artifactId>
						<executions>
							<execution>
								<id>pack200-pack</id>
								<goals>
									<goal>pack</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
					</plugin> -->
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-p2-plugin</artifactId>
						<executions>
							<execution>
								<id>p2-metadata</id>
								<goals>
									<goal>p2-metadata</goal>
								</goals>
								<phase>verify</phase>
							</execution>
						</executions>
						<configuration>
							<defaultP2Metadata>false</defaultP2Metadata>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>eclipse-pack</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<configuration>
							<includePackedArtifacts>true</includePackedArtifacts>
							<executionEnvironment>JavaSE-11</executionEnvironment>
						</configuration>
					</plugin>
					<plugin>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-pack200a-plugin</artifactId>
						<executions>
							<execution>
								<id>pack200-normalize</id>
								<goals>
									<goal>normalize</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-pack200b-plugin</artifactId>
						<executions>
							<execution>
								<id>pack200-pack</id>
								<goals>
									<goal>pack</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>tycho-p2-plugin</artifactId>
						<executions>
							<execution>
								<id>p2-metadata</id>
								<goals>
									<goal>p2-metadata</goal>
								</goals>
								<phase>package</phase>
							</execution>
						</executions>
						<configuration>
							<defaultP2Metadata>false</defaultP2Metadata>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<pluginRepositories>
		<pluginRepository>
			<id>repo.eclipse.org.cbi-releases</id>
			<url>https://repo.eclipse.org/content/repositories/cbi-releases/</url>
		</pluginRepository>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<archive>
						<addMavenDescriptor>false</addMavenDescriptor>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<ignoreTychoRepositories>true</ignoreTychoRepositories>
					<environments>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
					<executionEnvironment>JavaSE-11</executionEnvironment>
				</configuration>
			</plugin>

		</plugins>

		<pluginManagement>
			<plugins>
				<!-- Tycho plugins -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-pack200a-plugin</artifactId>
					<version>${tycho-extras-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho.extras</groupId>
					<artifactId>tycho-pack200b-plugin</artifactId>
					<version>${tycho-extras-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.dash.maven</groupId>
					<artifactId>eclipse-signing-maven-plugin</artifactId>
					<version>1.0.5</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.cbi.maven.plugins</groupId>
					<artifactId>eclipse-jarsigner-plugin</artifactId>
					<version>1.3.2</version>
					<configuration>
						<excludeInnerJars>true</excludeInnerJars>
					</configuration>
				</plugin>

				<plugin>
					<groupId>dev.aspectj</groupId>
					<artifactId>aspectj-maven-plugin</artifactId>
					<version>${aspectj-maven-compiler-version}</version>
					<executions>
						<execution>
							<phase>process-sources</phase>
							<id>compile</id>
							<goals>
								<goal>compile</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<complianceLevel>${maven.compiler.target}</complianceLevel>
						<aspectDirectory>src</aspectDirectory>
						<XnotReweavable>true</XnotReweavable>
						<Xlint>ignore</Xlint>
						<deprecation>true</deprecation>
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>

	</build>

</project>
